# Megan

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
deploy/: megan.service
scripts/: run_integration_tests.sh  seed_host.py
sql/: schema.sql
src/megan/: __init__.py  config.py  logging_setup.py  main.py  orchestrator.py  persona.py
src/megan/db/: __init__.py  migrate.py  pool.py  repository.py
src/megan/ingest/: __init__.py  dedup.py  extract.py  pipeline.py  transcribe.py
src/megan/llm/: __init__.py  client.py  tools.py
src/megan/monitor/: __init__.py  registry.py  ssh.py
src/megan/routing/: __init__.py  dates.py  linear.py  obsidian.py
src/megan/scheduler/: __init__.py  jobs.py
src/megan/telegram/: __init__.py  userbot.py
src/megan/triage/: __init__.py  engine.py
tests/: conftest.py  test_config.py  test_dates.py  test_dedup.py  test_monitor.py  test_triage_helpers.py  test_triage_state_machine.py
