[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "megan"
version = "0.1.0"
description = "Megan — a persistent, proactive personal assistant that lives in Telegram."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "0xneelo" }]

dependencies = [
    "anthropic>=0.40",
    "telethon>=1.36",
    "asyncpg>=0.29",
    "apscheduler>=3.10",
    "asyncssh>=2.14",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "openai>=1.40",
    "beautifulsoup4>=4.12",
    "readability-lxml>=0.8.1",
    "lxml>=5.2",
    "pypdf>=4.2",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
megan = "megan.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
